fixed vertical spacing on right site of card

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -150,6 +150,12 @@ footer {
     max-width: 650px;
   }
 
+  .info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
   .img-wrapper,
   .info {
     width: 50%;
